--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -134,6 +134,14 @@
   box-sizing: border-box;
 }
 
+/* Header Logo - Responsive */
+.header-logo {
+  max-width: 120px;
+  width: 100%;
+  height: auto;
+  flex-shrink: 0;
+}
+
 /* Tablet */
 @media screen and (min-width: 768px) {
   .header-top-content,
@@ -145,6 +153,10 @@
   .header-nav-content {
     padding-left: 0;
     padding-right: 24px;
+  }
+
+  .header-logo {
+    max-width: 180px;
   }
 }
 
@@ -159,6 +171,10 @@
   .header-nav-content {
     padding-left: 0;
     padding-right: 1px;
+  }
+
+  .header-logo {
+    max-width: 300px;
   }
 }
 
